@@ -45,6 +45,7 @@ K  7075	IMAPMessage.getReceivedDate should check if receivedDate is present
 K  7083	CollectorFormatter descending order data race
 K  7090	off-by-1 error in Response.readStringList causes early termination of
 	parsing FETCH response
+K  7094	INTERNALDATE FetchProfile Item
 
 
 		  CHANGES IN THE 1.5.4 RELEASE
